<resources>
    <string name="app_name">SimplyWash</string>
    <string name="title_activity_washers_map">Map</string>
    <string name="title_activity_washer_owner_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="price">Price</string>
    <string name="car">Car</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="more">More</string>
    <string name="title_activity_washer_details">WasherDetailsActivity</string>
    <string name="add_review">Add review</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="list_has_no_items">The list has no items yet</string>
    <string name="price_list">Price list</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="read_more">Read more</string>
    <string name="order">Order</string>
    <string name="boxes_available">Boxes available</string>
    <string name="no_service">No service</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="or">or</string>
    <string name="sing_in_with_google">Sing In with Google</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="rate_this_washer">Rate this washer</string>
    <string name="write_some_words_about_washer">Write some words about washer</string>
    <string name="name_optional">Name (optional)</string>
    <string name="some_words_about_it">Some words about it</string>
    <string name="people_like_it">people like it</string>
    <string name="close">Close</string>
    <string name="coffee">Coffee</string>
    <string name="card_payment">Card payment</string>
    <string name="wifi">WiFi</string>
    <string name="shop">Shop</string>
    <string name="wc">WC</string>
    <string name="rest_room">Rest room</string>
    <string name="service_station">Service station</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="edit">Edit</string>
    <string name="title_activity_price">Price list</string>
    <string name="title_activity_filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="only_favourites">Only favorites</string>
    <string name="services">Services</string>
    <string name="reset">Reset</string>

    <string-array name="priceCategoriesStrings">
        <item>To 50</item>
        <item>To 60</item>
        <item>To 80</item>
        <item>To 100</item>
        <item>Any price</item>
    </string-array>
    <integer-array name="priceCategoriesInt">
        <item>50</item>
        <item>60</item>
        <item>80</item>
        <item>100</item>
        <item>1000</item>
    </integer-array>
    <string name="title_activity_order">Order</string>
    <string name="when">When</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="washer">Washer</string>
    <string name="client_phone">Client phone</string>
    <string name="total_price">Total price</string>
    <string name="car_type">Car type</string>

    <string-array name="days">
        <item>Today</item>
        <item>Tomorrow</item>
        <item>After tomorrow</item>
    </string-array>

    <string name="title_activity_photos">Photos</string>
    <string name="share">Share</string>
    <string name="log_out">Log out</string>
    <string name="title_choose_city_activity">Choose your city</string>
    <string name="title_activity_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="map">Map</string>
    <string name="share_app_request">Please share our application</string>
    <string name="only_open">Only open</string>
    <string name="login_successful">Login successful</string>
    <string name="title_activity_share">Share</string>
    <string name="thanks_for_review">Thanks for review</string>
    <string name="anonym">Anonym</string>
    <string name="request_logout">Do you really want to log out?</string>
    <string name="round_the_clock">Round the clock</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="request_remove_favorite">Do you really want to remove this washer from favourites?</string>
    <string name="request_add_favorite">Do you really want to add this washer to favourites?</string>
    <string name="confirmation">Confirmation</string>
    <string name="added_favorite">Added to favorites</string>
    <string name="removed_favorite">Removed from favourites</string>
    <string name="nearest_was_found">The nearest washer was find</string>
    <string name="no_washers_found">No washers found</string>
    <string name="disconnected">Disconnected. Please re-connect.</string>
    <string name="network_lost" >Network lost. Please re-connect.</string>
    <string name="standart_wash">(Standart wash)</string>
    <string name="standart_price_switch">Price (standart wash)</string>
    <string name="rating_from">Rating from</string>
    <string name="people_rated_it">people(s) rated it</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="see_price_list">See price list</string>
    <string name="show_on_map">Show on map</string>
    <string name="schedule">Schedule</string>
    <string name="weekdays">Weekdays</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="boxes">box(es)</string>
    <string name="failed_to_call">Failed to call</string>
    <string name="title_add_washer">Suggest washer</string>
    <string name="pick_num_of_boxes">Pick number of boxes</string>
    <string name="pick_services">Pick services</string>
    <string name="pick_place">Pick place</string>
    <string name="pick_schedule">Pick schedule</string>
    <string name="schedule_24_7">Schedule: 24/7</string>
    <string name="required_error">Required</string>
    <string name="washer_already_registered">This washer is already in our database. \\n Please, select another place</string>
    <string name="place_isnt_washer">This place is not a washer</string>
    <string name="uploading_photos">Uploading photo </string>
    <string name="uploading_washer">Uploading washer </string>
    <string name="thanks_for_adding_washer">Thank you for help</string>
    <string name="uploading">Uploading</string>
    <string name="no_info">No information yet</string>
    <string name="no_washers_in_your_city">There are no washers in your city</string>
    <string name="error_while_sign_up">Something went wrong while singing up</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>
