<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/services" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/im_coffee"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/switch_coffee"
                            app:srcCompat="@drawable/ic_service_coffee_black_24dp" />

                        <Switch
                            android:id="@+id/switch_coffee"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/coffee" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/im_card_payment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/switch_cardPayment"
                            app:srcCompat="@drawable/ic_credit_card_black_24dp" />

                        <Switch
                            android:id="@+id/switch_cardPayment"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/card_payment" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/iv_wifi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/wifi"
                            android:labelFor="@+id/switch_wifi"
                            app:srcCompat="@drawable/ic_action_wifi" />

                        <Switch
                            android:id="@+id/switch_wifi"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/wifi" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/im_grocery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/shop_switch"
                            app:srcCompat="@drawable/ic_local_grocery_store_black_24dp" />

                        <Switch
                            android:id="@+id/switch_grocery"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/shop" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/im_service_station"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/service_station_switch"
                            app:srcCompat="@drawable/ic_repare_black_24dp" />

                        <Switch
                            android:id="@+id/switch_service_station"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/service_station" />
                    </LinearLayout>


                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/im_wc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/toilet_switch"
                            app:srcCompat="@drawable/ic_wc_black_24dp" />

                        <Switch
                            android:id="@+id/switch_wc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/wc" />
                    </LinearLayout>

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingBottom="8dp">

                        <ImageView
                            android:id="@+id/iv_restRoom"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/rest_room_switch"
                            app:srcCompat="@drawable/ic_rest_black_24dp" />

                        <Switch
                            android:id="@+id/switch_rest_room"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:padding="8dp"
                            android:text="@string/rest_room" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_close"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <Button
                android:id="@+id/btn_apply"
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/apply" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>